<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Contact Chanel</string>
    <string name="hello">Hello world! Main Activity!</string>
    <string name="action_settings">Settings</string>
    <string name="call_phone">Call Phone</string>
    <string name="send_email">Send Email</string>
    <string name="input_number">Input Phone Number</string>
    <string name="input_message">Input Messages</string>
    <string name="input_email">Input Email</string>
    <string name="back_home">Back Home</string>
    <string name="title_activity_call_phone">CallPhoneActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_send_email">SendEmailActivity</string>

</resources>
